--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
   </head>
 
   <body>
-    <section id="app-root">
-      <h1>Saker jag måste göra</h1>
-      <div id="list-root">
-        <!-- Allt här i genereras av Javascript -->
-      </div>
-      <form data-list-form>
-        <input type="text" data-list-input />
-        <button>+</button>
-      </form>
-    </section>
-
-    <form id="userForm">
-      <input type="text" name="name" id="name" />
-      <input type="text" name="password" id="password" />
-      <input type="submit" name="submit" id="" />
-    </form>
+    <div id="gameContainer">
+      <div id="score">0</div>
+      <canvas id="gameCanvas"></canvas>
+    </div>
   </body>
 </html>
